# AI-tester

./: .gitignore
.claude/: settings.json
AAA- IMP Prod live Agents/: ProdAgents.md
QABuddy/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
QABuddy/app/: globals.css  layout.tsx  page.tsx
QABuddy/lib/: bm25.ts  knowledge-base.ts  prompts.ts
QABuddy/public/: architecture.html  docs.html
advanced_RAG/: .env.example  .gitignore  README.md  docker-compose.yml  explainer.html  prompt.md
advanced_RAG/backend/: pyproject.toml
advanced_RAG/backend/app/: config.py  main.py
advanced_RAG/backend/app/ingest/: ingest.py
advanced_RAG/backend/app/models/: schemas.py
advanced_RAG/backend/app/pipeline/: events.py  orchestrator.py
advanced_RAG/backend/app/routers/: chat.py  collection.py  health.py
advanced_RAG/backend/app/services/: embedding.py  generator.py  qdrant_client.py  query_rewriter.py  reranker.py
advanced_RAG/frontend/: index.html  package-lock.json  package.json
advanced_RAG/scripts/: generate_test_cases.py  vwo_taxonomy.py
basicRAG/: .gitignore  README.md
caludeCode/: package-lock.json  package.json  tsconfig.json
langflow_rag/: AI_3X_Naive RAG.json
learnings/: 2026-07-11-langflow-docker-volume-db-persistence.md  2026-07-12-flagembedding-reranker-bypass.md  2026-07-18-qabuddy-multisource-rag.md
playwright-framework/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
skills/: framework-design-challenge.md  interview-qa-prep.md
(+140 files in other folders)
